initial auth infrastructure setup, need to fix common module import

--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -14,8 +14,16 @@ spec:
     spec:
       containers:
         - name: auth
-          image: berkanalci/tt-ms-auth
+          image: berkanalci/aa-auth
           env:
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
             - name: JWT_KEY
