--- a/auth/package.json
+++ b/auth/package.json
@@ -27,11 +27,13 @@
         "ts-jest": "^28.0.2"
     },
     "dependencies": {
+        "@cgestione/fl-common": "^1.0.5",
         "@types/cookie-session": "^2.0.44",
         "@types/express": "^4.17.13",
         "@types/jsonwebtoken": "^8.5.8",
         "cookie-session": "^2.0.0",
         "express": "^4.18.1",
+        "express-async-errors": "^3.1.1",
         "express-validator": "^6.14.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.2",
